--- a/AutoLike4Like/AutoLike4Like/packages.config
+++ b/AutoLike4Like/AutoLike4Like/packages.config
@@ -3,7 +3,8 @@
   <package id="Emgu.CV" version="4.6.0.5131" targetFramework="net472" />
   <package id="Emgu.CV.Bitmap" version="4.6.0.5131" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net472" />
-  <package id="Selenium.WebDriver" version="4.7.0" targetFramework="net472" />
+  <package id="Selenium.WebDriver" version="4.8.0" targetFramework="net472" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="110.0.5481.7700" targetFramework="net472" />
   <package id="System.Drawing.Common" version="6.0.0" targetFramework="net472" />
   <package id="System.Drawing.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
