--- a/AutoAviso/AutoAviso/AutoAviso.csproj
+++ b/AutoAviso/AutoAviso/AutoAviso.csproj
@@ -74,6 +74,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Config.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="AccountProfit.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
