--- a/CamelBTC/CamelBTC/CamelBTC.csproj
+++ b/CamelBTC/CamelBTC/CamelBTC.csproj
@@ -51,6 +51,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClaimDonal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ClaimDonal.Designer.cs">
+      <DependentUpon>ClaimDonal.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -59,6 +65,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="ClaimDonal.resx">
+      <DependentUpon>ClaimDonal.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
